--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.css
@@ -238,6 +238,41 @@
       color: white !important;
       background-color: white !important;
     }
+    ::ng-deep .p-dropdown{
+        height: 33px;
+        width: 100%;
+        border: 1px solid rgba(0, 0, 0, 0.20);
+        border-radius: 4px;
+        }
+        ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
+        padding:3px;
+    
+    
+        }
+    
+        ::ng-deep
+        .p-dropdown .p-dropdown-label {
+            padding: 3px;
+            font-size: 14px;
+            color: #000;
+        }
+    
+        ::ng-deep
+        .p-dropdown-filter {
+            width: 100%;
+            height: 30px;
+            border-radius: 4px;
+        }
+        ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+          font-size: 14px;
+          color: #000;
+          padding:3px 20px;
+          font-family: Roboto;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
     
 
   
