--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -1069,7 +1069,7 @@
                     </div>
                     <div class="col-xl-6">
                         <div class="mb-3 row">
-                            <label for="minmax-buttons" class="col-5 col-form-label" id="scheduleLabel">Limit Amount{{'gis.quotation.risk_sections' | translate}}:</label>
+                            <label for="minmax-buttons" class="col-5 col-form-label" id="scheduleLabel">{{'gis.quotation.limit_amount' | translate}}:</label>
                             <div class="col-7">
                                 <input type="number" id="scheduleInput" class="form-control form-control-sm mb-1" formControlName="limitAmount">                             </div>
                             </div>
