--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -2,7 +2,6 @@
     <p class="titleMain mt-3"> {{'gis.quotation.quotation_covertypes' | translate}}</p>
     <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
     <div class="container mx-2 mt-n1">
-
         <div *ngFor="let risk of riskLevelPremiums; let i = index; " class="card mb-3" style=" position: relative;">
 
             <ngx-spinner name="coverComparisonScreen" type="ball-clip-rotate-multiple" [fullScreen]="false"
@@ -35,13 +34,13 @@
                     <div class="col-lg-1 col-12"></div>
                     <div class="col-lg-4 col-12 ">
                         <p class="title2"> {{'gis.quotation.levies_and_taxes' | translate}}</p>
-                        <div *ngFor="let tax ">
+                        <div *ngFor="let taxInformation ">
                             <div class="row">
                                 <div class="col-6">
-                                    <p class="details-label">{{ tax.description }}</p>
+                                    <p class="details-label">{{ taxInformation.description }}</p>
                                 </div>
                                 <div class="col-6">
-                                    <p class="details-label">{{ tax.amount }}</p>
+                                    <p class="details-label">{{ taxInformation.amount }}</p>
                                 </div>
                             </div>
                         </div>
@@ -159,15 +158,57 @@
                         </div>
                     </div>
                 </div>
+              
+
+                 
                 <!-- Share Quote Modal -->
                 <div class="modal fade" id="shareQuote" tabindex="-1" aria-labelledby="shareQuote" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content  ps-4 pt-4 pe-4">
-
                             <div class="row">
                                 <div class="col-3">
+                                    <p-radioButton 
+                                        name="flexRadioDefault" 
+                                        [(ngModel)]="selectedOption" 
+                                        value="email" 
+                                        inputId="flexRadioDefault2"
+                                        [ngClass]="{ 'bold-label': selectedOption === 'email' }">
+                                    </p-radioButton>
+                                    <label class="ps-2" id="shareQuoteLabel" for="flexRadioDefault2"
+                                    [ngClass]="{ 'bold-label': selectedOption === 'email' }">{{ 'gis.quotation.email' | translate }}</label>
+                                </div>
+                                
+                                <div class="col-3">
+                                    <p-radioButton 
+                                        name="flexRadioDefault" 
+                                        [(ngModel)]="selectedOption" 
+                                        value="sms" 
+                                        inputId="shareRadioSms"
+                                        [ngClass]="{ 'bold-label': selectedOption === 'sms' }">
+                                    </p-radioButton>
+                                    <label class="ps-2" id="shareQuoteLabel" for="shareRadioSms"
+                                    [ngClass]="{ 'bold-label': selectedOption === 'sms' }">{{ 'gis.quotation.sms' | translate }}</label>
+                                </div>
+                                
+                                <div class="col-4">
+                                    <p-radioButton 
+                                        name="flexRadioDefault" 
+                                        [(ngModel)]="selectedOption" 
+                                        value="whatsapp" 
+                                        inputId="shareRadioWhatsApp"
+                                        [ngClass]="{ 'bold-label': selectedOption === 'whatsapp' }">
+                                    </p-radioButton>
+                                    <label class="ps-2" id="shareQuoteLabel" for="shareRadioWhatsApp"
+                                    [ngClass]="{ 'bold-label': selectedOption === 'whatsapp' }">{{ 'gis.quotation.whatsapp' | translate }}</label>
+                                </div>
+                            </div>
+                            
+
+                            <!-- <div class="row">
+                                <div class="col-3">
+                                    
                                     <input class="form-check-input" type="radio" id="shareRadio" name="flexRadioDefault"
-                                        [(ngModel)]="selectedOption" value="email" />
+                                        [(ngModel)]="selectedOption" value="email" checked />
 
                                     <span class="ps-2" id="shareQuoteLabel"
                                         [ngClass]="{ 'bold-label': selectedOption === 'email' }">
@@ -188,8 +229,9 @@
                                         {{'gis.quotation.whatsapp' | translate}}</span>
 
                                 </div>
-                            </div>
-
+                            </div> -->
+                            
+                            
                             <div class="form-group mt-3">
                                 <label class="mb-1" for="clientName" id="shareLabel"> {{'gis.quotation.client_name' |
                                     translate}}</label>
