VQ-2784 Update Documents API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <tq-frontend-notifications></tq-frontend-notifications>
+
+<ngx-spinner name="download" type="ball-clip-rotate-multiple"
+             [fullScreen]="true" color="#00529B" size="medium"
+             bdColor="rgba(255, 255, 255, 0.966)">
+</ngx-spinner>
 <router-outlet></router-outlet>
