--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/upload-documents/upload-documents.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/upload-documents/upload-documents.component.html
@@ -5,11 +5,9 @@
       <ng-container *ngIf="claimDocuments as claimDocuments; else loading">
         <div class="row">
           <ng-container *ngFor="let document of claimDocuments; let i = index">
-            <!-- Column with specified width -->
-            <div class="col-md-4 col-sm-12 mb-4">
+            <div class="col-md-4 col-sm-12 mb-4" *ngIf="document.submitted !== 'Y'; else update_doc;">
               <div class="d-flex align-items-center flex-wrap custom-items-center ">
                 <label class="fixed-width-label ">{{ document?.desc }}<span *ngIf="document.submitted === 'Y'" style="color: red;">*</span></label>
-
                 <div class="form-group">
                   <p-fileUpload
                     mode="basic"
@@ -27,8 +25,27 @@
                     (onProgress)=" onProgress($event)"
                   ></p-fileUpload>
                 </div>
+
               </div>
             </div>
+            <ng-template #update_doc>
+              <div class="col-md-4 col-sm-12 mb-4">
+                <div class="d-flex align-items-center">
+                  <i class="bi bi-file-earmark-pdf text-danger me-2" style="font-size: 1.5rem;"></i>
+                  <span class="me-2">{{ document?.sht_desc }}</span>
+                  <div class="progress flex-grow-1" style="height: 5px;">
+                    <div class="progress-bar bg-success" role="progressbar" [style.width]="'100%'" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <span class="ms-2 text-success">Completed</span>
+                  <button type="button" class="btn btn-link text-danger ms-2 p-0" (click)="deleteDocument(document?.uploadedDocId)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                      <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
+                      <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </ng-template>
             <div class="clearfix" style="width: 100%" *ngIf="(i + 1) % 2 === 0"></div>
             <!-- Insert row break after every 2 columns -->
           </ng-container>
