VQ-2784 Update Documents API

--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/surrender-claims/surrender-claims.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/surrender-claims/surrender-claims.component.html
@@ -94,7 +94,7 @@
   <!-- Proceed Button -->
   <div class="button-container">
     <button class="proceed-btn" (click)="submitClaimInitFormData()">
-      {{ "lms.ind.proceed" | translate }}
+      {{ "lms.ind.book_claim" | translate }}
     </button>
   </div>
   <!-- End of Proceed Button -->
