--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <tq-frontend-notifications></tq-frontend-notifications>
 
-<ngx-spinner name="download" type="ball-clip-rotate-multiple"
+<ngx-spinner name="download_view" type="ball-clip-rotate-multiple"
              [fullScreen]="true" color="#00529B" size="medium"
              bdColor="rgba(255, 255, 255, 0.966)">
 </ngx-spinner>
